--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=hotelbooking
+
+
+server.port=8070
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotelbooking
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.connectionTimeout=30000
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maxLifetime=1800000
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
+spring.jackson.serialization.fail-on-empty-beans=false
